deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-hello-world
  namespace: businessapps
  labels:
    app: nodejs-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-hello-world
  template:
    metadata:
      labels:
        app: nodejs-hello-world
    spec:
      containers:
      - name: nodejs-hello-world
        image: blizzard2k8/docker-nodejs-hello-world:0.2
        ports:
        - containerPort: 3000
        resources:
              requests:
                cpu: 25m
                memory: 64Mi
              limits:
                cpu: 410m
                memory: 512Mi
